--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,31 +5,21 @@
   <div class="fluid-container">
 
     <ul class="nav navbar-nav">
-      <!--
-      <li class="active">
-        <a href="http://allcapturedinaflash.com"><span class="glyphicon glyphicon-home"></span> Home</a>
-      </li>-->
-      <li>
-        <a href="#">&nbsp;<span class="glyphicon glyphicon-globe"></span> 360 Virtual Tours</a>
-      </li>
-      <!--
+      
+      
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-camera"></span> Gallery <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-camera"></span> Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="">Family</a></li>
-            <li><a href="">Engagement</a></li>
-            <li><a href="">Wedding</a></li>
-            <li><a href="">Boudoir</a></li>
-            <li><a href="">Newborn</a></li>
-            <li><a href="">Cake Smash</a></li>
-            <li><a href="">Events</a></li>
+            <li><a href="">menu item</a></li>
+            
             
               <li class="divider"></li>
-              <li><a href="https://devcenter.heroku.com/articles/getting-started-with-heroku-and-connect-without-local-dev">Getting Started on Heroku with Heroku Connect</a></li>
-              <li><a href="https://devcenter.heroku.com/articles/getting-started-with-jruby">Getting Started with Ruby on Heroku (Microsoft Windows)</a></li>
+              <h4>Resources:</h4>
+              <li><a href="https://developers.facebook.com/docs/facebook-login/access-tokens/expiration-and-extension">Facebook access token extension</a></li>
+              <li><a href="https://codeforgeek.com/2014/09/facebook-login-using-nodejs-express/">Facebook login Node.js example</a></li>
             
           </ul>
-      </li>-->
+      </li>
     </ul>
 
     <!--
