--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
 <footer class="container-fluid">
         
-    <span class="glyphicon glyphicon-copyright-mark"></span> 2016 All Captured in a Flash &nbsp;
+    <span class="glyphicon glyphicon-copyright-mark"></span> 2016 &nbsp;
 
     <div
         class="fb-like"
@@ -14,63 +14,3 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="https://cdn.pannellum.org/2.2/pannellum.js"></script>
-
-<script type="text/javascript" src="/js/bundle.js" ></script>
-
-<script type="text/javascript">
-
-    pannellum.tour = function(firstScene,scenes,renderid){
-        pannellum.viewer(renderid, {   
-            "default": {
-                "firstScene": firstScene,
-                "type": "equirectangular",
-                "author": "All Captured in a Flash",
-                "sceneFadeDuration": 1000,
-                "autoRotate": -0.25,
-                "autoLoad": true,
-                "showFullscreenCtrl": true,
-                "hotSpotDebug":true
-            },
-
-            "scenes": scenes
-            
-        });
-    };
-
-    pannellum.sphere = function(panorama,renderid){
-        pannellum.viewer(renderid, {
-            "type": "equirectangular",
-            "panorama": panorama,
-            "autoRotate": -0.25,
-            "autoLoad": true,
-            "showFullscreenCtrl": true
-
-        });
-    };
-    
-    $('[data-panorama]')
-        .on('shown.bs.modal',function(ev){
-            pannellum.sphere($(ev.target).attr('data-panorama'),$(ev.target).attr('data-renderid'));
-        });
-
-    $('[data-tour]')
-        .on('shown.bs.modal',function(ev){
-            var $target = $(ev.target);
-            pannellum.tour($target.attr('data-first-scene'),JSON.parse($target.attr('data-scenes')),$target.attr('data-renderid'));
-        });
-
-</script>
-
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-79839423-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
