--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,7 @@
-<title>360 Virtual Tours - All Captured in a Flash</title>
+<title>Facebook Login with Long-lived Page Access Token</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-<link rel="stylesheet" href="https://cdn.pannellum.org/2.2/pannellum.css"/>
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 
